--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/views/MapItemDetailView.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/views/MapItemDetailView.xib
@@ -5,35 +5,84 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MapItemDetailView" customModule="pingeb_org" customModuleProvider="target">
             <connections>
-                <outlet property="titleLabel" destination="ov2-tC-1W2" id="gWt-yg-8UN"/>
+                <outlet property="bottomConstraint" destination="qTx-RC-pdy" id="hq4-Bt-U54"/>
+                <outlet property="detailDescriptionLabel" destination="Hfq-1W-FZo" id="f2r-6Q-5WC"/>
+                <outlet property="detailImageView" destination="Pci-HH-r7K" id="KZd-5n-BS8"/>
+                <outlet property="detailTitleLabel" destination="dyg-xl-srE" id="myX-rx-uR0"/>
+                <outlet property="imageHeightConstraint" destination="oyW-l7-eip" id="VcU-FN-hu5"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MapItemDetailView" customModule="pingeb_org" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ov2-tC-1W2">
-                    <rect key="frame" x="8" y="8" width="584" height="21"/>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o0n-Nz-Ja0">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="TH3-sC-jc5">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
+                    <blurEffect style="light"/>
+                </visualEffectView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pci-HH-r7K">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="21" id="oFM-NF-E3f"/>
+                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="150" id="oyW-l7-eip"/>
                     </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dyg-xl-srE">
+                    <rect key="frame" x="8" y="158" width="584" height="26"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hfq-1W-FZo">
+                    <rect key="frame" x="8" y="192" width="578" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E4d-Cg-0lj">
+                    <rect key="frame" x="8" y="221" width="288" height="371"/>
+                    <state key="normal" title="Route"/>
+                    <connections>
+                        <action selector="didClickRouteButton:" destination="-1" eventType="touchUpInside" id="Fyf-AC-EBV"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aue-tN-Mtn">
+                    <rect key="frame" x="304" y="221" width="288" height="371"/>
+                    <state key="normal" title="Open"/>
+                    <connections>
+                        <action selector="didClickOpenButton:" destination="-1" eventType="touchUpInside" id="tLN-40-NEJ"/>
+                    </connections>
+                </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="ov2-tC-1W2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="4DW-Tl-cPn"/>
-                <constraint firstAttribute="trailing" secondItem="ov2-tC-1W2" secondAttribute="trailing" constant="8" id="G6q-7o-KJg"/>
-                <constraint firstItem="ov2-tC-1W2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="tjp-Nu-W1l"/>
+                <constraint firstItem="E4d-Cg-0lj" firstAttribute="top" secondItem="Hfq-1W-FZo" secondAttribute="bottom" constant="8" id="1vB-nl-vuE"/>
+                <constraint firstAttribute="bottom" secondItem="o0n-Nz-Ja0" secondAttribute="bottom" id="AFa-kv-rvc"/>
+                <constraint firstItem="Hfq-1W-FZo" firstAttribute="top" secondItem="dyg-xl-srE" secondAttribute="bottom" constant="8" id="C2X-yO-UFs"/>
+                <constraint firstItem="Pci-HH-r7K" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="CZk-Za-H66"/>
+                <constraint firstAttribute="trailing" secondItem="o0n-Nz-Ja0" secondAttribute="trailing" id="CaF-6b-0xX"/>
+                <constraint firstItem="o0n-Nz-Ja0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="EIq-WL-Odb"/>
+                <constraint firstItem="dyg-xl-srE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="Jil-7M-GRd"/>
+                <constraint firstItem="dyg-xl-srE" firstAttribute="top" secondItem="Pci-HH-r7K" secondAttribute="bottom" constant="8" id="Trg-1j-0gF"/>
+                <constraint firstAttribute="trailing" secondItem="Hfq-1W-FZo" secondAttribute="trailing" constant="14" id="VLj-H5-aDu"/>
+                <constraint firstItem="Pci-HH-r7K" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="YSc-Ru-5Ss"/>
+                <constraint firstItem="o0n-Nz-Ja0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="glm-m2-HqD"/>
+                <constraint firstAttribute="trailing" secondItem="Pci-HH-r7K" secondAttribute="trailing" id="k2L-ox-Qyg"/>
+                <constraint firstAttribute="trailing" secondItem="dyg-xl-srE" secondAttribute="trailing" constant="8" id="oBZ-do-rxS"/>
+                <constraint firstAttribute="bottom" secondItem="E4d-Cg-0lj" secondAttribute="bottom" constant="8" id="qTx-RC-pdy"/>
+                <constraint firstItem="aue-tN-Mtn" firstAttribute="height" secondItem="E4d-Cg-0lj" secondAttribute="height" id="qh4-M2-wsI"/>
+                <constraint firstItem="E4d-Cg-0lj" firstAttribute="width" secondItem="aue-tN-Mtn" secondAttribute="width" id="rO7-Xv-zNK"/>
+                <constraint firstItem="Hfq-1W-FZo" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="s1l-Oj-ADk"/>
+                <constraint firstAttribute="trailing" secondItem="aue-tN-Mtn" secondAttribute="trailing" constant="8" id="szM-PL-3jZ"/>
+                <constraint firstItem="aue-tN-Mtn" firstAttribute="leading" secondItem="E4d-Cg-0lj" secondAttribute="trailing" constant="8" id="ulb-zy-mbg"/>
+                <constraint firstItem="E4d-Cg-0lj" firstAttribute="bottom" secondItem="aue-tN-Mtn" secondAttribute="bottom" id="xwP-ms-6bi"/>
+                <constraint firstItem="E4d-Cg-0lj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="y89-1s-4BU"/>
             </constraints>
-            <connections>
-                <outlet property="titleLabel" destination="ov2-tC-1W2" id="ksB-08-Yhp"/>
-            </connections>
             <point key="canvasLocation" x="374" y="484"/>
         </view>
     </objects>
