--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/views/ExtendedTabbarView.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/views/ExtendedTabbarView.xib
@@ -8,69 +8,54 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ExtendedTabbarView">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jXa-zp-Itr">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="JGD-Rs-Cuu">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xamoom-ble" translatesAutoresizingMaskIntoConstraints="NO" id="2Cl-N3-suN">
-                                <rect key="frame" x="8" y="8" width="36" height="54"/>
+                                <rect key="frame" x="8" y="44" width="25" height="38"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="54" id="CL7-NH-iCV"/>
-                                    <constraint firstAttribute="width" constant="36" id="U1p-yR-8Tp"/>
+                                    <constraint firstAttribute="height" constant="38" id="IVd-dx-lmO"/>
+                                    <constraint firstAttribute="width" constant="25" id="SiE-Ca-8va"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Placeholder text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6s-rb-JxY">
-                                <rect key="frame" x="52" y="15" width="507" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="41" y="44" width="551" height="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click here to discover" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EcJ-jz-dXi">
-                                <rect key="frame" x="52" y="37" width="507" height="17"/>
+                                <rect key="frame" x="41" y="65" width="551" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z9W-Ht-dNZ">
-                                <rect key="frame" x="558" y="0.0" width="42" height="42"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="42" id="Ekn-f5-IlS"/>
-                                    <constraint firstAttribute="height" constant="42" id="Rcn-zx-xbM"/>
-                                </constraints>
-                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
-                                <state key="normal" image="x"/>
-                                <connections>
-                                    <action selector="close:" destination="iN0-l3-epB" eventType="touchUpInside" id="fLu-bK-LPN"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="EcJ-jz-dXi" firstAttribute="width" secondItem="S6s-rb-JxY" secondAttribute="width" id="3rh-2K-JcR"/>
-                            <constraint firstItem="Z9W-Ht-dNZ" firstAttribute="leading" secondItem="S6s-rb-JxY" secondAttribute="trailing" constant="-1" id="F7i-PT-7Ph"/>
-                            <constraint firstItem="S6s-rb-JxY" firstAttribute="leading" secondItem="2Cl-N3-suN" secondAttribute="trailing" constant="8" id="Jhg-ke-TwX"/>
-                            <constraint firstItem="Z9W-Ht-dNZ" firstAttribute="top" secondItem="JGD-Rs-Cuu" secondAttribute="top" id="KkQ-X6-dBD"/>
-                            <constraint firstItem="2Cl-N3-suN" firstAttribute="leading" secondItem="JGD-Rs-Cuu" secondAttribute="leading" constant="8" id="UtT-aB-Bf6"/>
-                            <constraint firstAttribute="bottom" secondItem="2Cl-N3-suN" secondAttribute="bottom" constant="8" id="X99-5Y-4Cx"/>
-                            <constraint firstItem="S6s-rb-JxY" firstAttribute="top" secondItem="JGD-Rs-Cuu" secondAttribute="top" constant="15" id="dxn-v3-aob"/>
-                            <constraint firstItem="EcJ-jz-dXi" firstAttribute="top" secondItem="S6s-rb-JxY" secondAttribute="bottom" constant="-2" id="hig-Dj-itj"/>
-                            <constraint firstAttribute="trailing" secondItem="Z9W-Ht-dNZ" secondAttribute="trailing" id="i9v-Z2-b5a"/>
-                            <constraint firstItem="2Cl-N3-suN" firstAttribute="top" secondItem="JGD-Rs-Cuu" secondAttribute="top" constant="8" id="lGf-HW-dfH"/>
-                            <constraint firstItem="EcJ-jz-dXi" firstAttribute="leading" secondItem="S6s-rb-JxY" secondAttribute="leading" id="sDS-FT-1BG"/>
+                            <constraint firstItem="EcJ-jz-dXi" firstAttribute="trailing" secondItem="S6s-rb-JxY" secondAttribute="trailing" id="A37-Gt-pZf"/>
+                            <constraint firstItem="EcJ-jz-dXi" firstAttribute="top" secondItem="S6s-rb-JxY" secondAttribute="bottom" constant="-1" id="RmZ-2V-EhY"/>
+                            <constraint firstItem="EcJ-jz-dXi" firstAttribute="leading" secondItem="S6s-rb-JxY" secondAttribute="leading" id="c0B-j5-HdC"/>
+                            <constraint firstItem="S6s-rb-JxY" firstAttribute="leading" secondItem="2Cl-N3-suN" secondAttribute="trailing" constant="8" id="cXH-Ad-8aX"/>
+                            <constraint firstItem="S6s-rb-JxY" firstAttribute="top" secondItem="2Cl-N3-suN" secondAttribute="top" id="euk-tS-BaR"/>
                         </constraints>
                     </view>
-                    <blurEffect style="dark"/>
+                    <constraints>
+                        <constraint firstItem="2Cl-N3-suN" firstAttribute="leading" secondItem="jXa-zp-Itr" secondAttribute="leading" constant="8" id="5rV-B2-n31"/>
+                        <constraint firstAttribute="bottom" secondItem="2Cl-N3-suN" secondAttribute="bottom" constant="8" id="6vQ-6L-BQd"/>
+                        <constraint firstAttribute="trailing" secondItem="S6s-rb-JxY" secondAttribute="trailing" constant="8" id="c12-rH-jR8"/>
+                    </constraints>
+                    <blurEffect style="extraLight"/>
                 </visualEffectView>
             </subviews>
             <constraints>
-                <constraint firstItem="jXa-zp-Itr" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="3XD-ea-7qV"/>
-                <constraint firstAttribute="bottom" secondItem="jXa-zp-Itr" secondAttribute="bottom" id="4Gh-0t-VSZ"/>
-                <constraint firstItem="jXa-zp-Itr" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="UkL-AZ-L4Y"/>
-                <constraint firstAttribute="trailing" secondItem="jXa-zp-Itr" secondAttribute="trailing" id="dOr-WL-b1k"/>
+                <constraint firstItem="jXa-zp-Itr" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="501-r7-hqp"/>
+                <constraint firstAttribute="trailing" secondItem="jXa-zp-Itr" secondAttribute="trailing" id="9Na-NE-y9E"/>
+                <constraint firstAttribute="bottom" secondItem="jXa-zp-Itr" secondAttribute="bottom" id="Q5f-Tf-s2D"/>
+                <constraint firstItem="jXa-zp-Itr" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vaJ-dH-izg"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -78,11 +63,10 @@
                 <outlet property="descriptionLabel" destination="EcJ-jz-dXi" id="Klz-fZ-w1F"/>
                 <outlet property="titleLabel" destination="S6s-rb-JxY" id="lFz-3e-yMe"/>
             </connections>
-            <point key="canvasLocation" x="682" y="390"/>
+            <point key="canvasLocation" x="682" y="400"/>
         </view>
     </objects>
     <resources>
-        <image name="x" width="105" height="105"/>
         <image name="xamoom-ble" width="65" height="103"/>
     </resources>
 </document>
